@@ -26,6 +26,12 @@ if ![is_elf_format] {
     return
 }
 
+# Skip target where -shared is not supported
+
+if ![check_shared_lib_support] {
+    return
+}
+
 # Check if compiler works
 if { [which $CC] == 0 } {
     return
